<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Francisco José Osuna Alcaide.</b></string>
    <string name="accept">Aceptar</string>
    <string name="start_title">¡Hola!</string>
    <string name="start_first">Prepárate para explorar el mundo mágico de ésta aplicación inspirada en Spyro</string>
    <string name="start_second">Eśta guía te enseñará a moverte por las pestañas de la aplicación, las cuales están llenas de dragones, mundos fascinantes y tesoros brillantes.</string>
    <string name="start_third">!Vamos allá¡</string>
    <string name="start_final">Pulsa sobre la libélula y deja que Spyro te lleve volando a través de esta guía interactiva.</string>
    <string name="exit_guide">Saltar Guía</string>
    <string name="personajes_descripcion">Aquí podrás explorar a todos los personajes del mundo de Spyro.</string>
    <string name="mundos_descripcion">En esta sección encontrarás los sorprendentes y extraños mundos por los que transcurre el juego de Spyro</string>
    <string name="coleccionables_descripcion">En esta sección encontrarás todos los coleccionables de los que dispone este mítico juego.</string>
    <string name="informacion_descripcion">El botón de información sirve para conocer el desarrollador de ésta guía.</string>
    <string name="summary_title">¡Gracias por tu atención!</string>
    <string name="summary_first">A lo largo de este tutorial hemos visto lo siguiente:</string>
    <string name="summary_second">Este botón nos lleva a un listado con personajes del universo de Spyro.</string>
    <string name="summary_third">Aquí encontramos los mundos de Spyro.</string>
    <string name="summary_final">Cuando buscamos los coleccionables del juego tenemos que pulsar éste botón.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary_egg">¡Pulsa el Huevo!</string>
</resources>