<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/startguide"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_alpha"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_title"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_first"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_characters"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_second"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_world"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_third"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="20dp"
            />
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ic_collectibles"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_final"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_egg"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="20dp"
            />
        <ImageView
            android:id="@+id/fin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dragon_eggs"
            android:clickable="true"
            />

    </LinearLayout>
</FrameLayout>