<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/startguide"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_alpha"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:textSize="50sp"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_first"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/spyrostart"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_second"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_third"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_final"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="20dp"
        />
    <ImageView
        android:id="@+id/comenzarGuia"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/boton_libelula"
        android:enabled="true"
        android:clickable="true"
        android:backgroundTint="@null"/>
    <include
        android:id="@+id/saltarGuia"
        layout="@layout/boton_saltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="-20dp"/>
    </LinearLayout>
</FrameLayout>